--- a/testfiles/camera_profile.yml
+++ b/testfiles/camera_profile.yml
@@ -1,6 +1,5 @@
 # Example Trust Profile for evaluating camera_credential.json
 ---
-
 metadata:
   name: Experimental Camera Profile
   issuer: JPEG Trust Committee
@@ -8,23 +7,19 @@ metadata:
   version: 1.0.0
   language: en
 
-profile_metadata:
-  something: value
-
-sample_common:
+"foo:sample":
   description: This is a sample camera profile for testing purposes
-  number:  1234567890
+  number: 1234567890
 
 ---
 # Section 1
 
-- 
-  id: generalInfo
+- id: generalInfo
   description: Section 1 - General Information
   title: General Information
   report_text: This section provides information about general stuff
 
--   # check for content modification 
+- # check for content modification
   # description provides additional context that does not go into the report
   id: content
   description: content is unmodified
@@ -38,10 +33,10 @@ sample_common:
     "false":
       en: This content has been modified
 
--   # See if the asset has been modified after creation
+- # See if the asset has been modified after creation
   id: declaration_only
   description: is there a declaration and no manifests present?
-  expression:  contains(keys(@), "declaration") && !contains(keys(@), "manifest")
+  expression: contains(keys(@), "declaration") && !contains(keys(@), "manifest")
   report_text:
     "true":
       en: No modifications took place after it was created
@@ -51,13 +46,12 @@ sample_common:
 ---
 # Section 2 - GPS & Location information
 
-- 
-  id: location
+- id: location
   description: Section 2 - GPS & Location information
   title: Location Information
   report_text: This section provides information about where the image was taken
 
--   # check the GPS location
+- # check the GPS location
   id: gps
   description: GPS location approximate to China's
   expression: >
@@ -73,9 +67,7 @@ sample_common:
     "false":
       en: The GPS information shows that the image was taken outside of China
 
-  
-
--   # check the human entered value for the city
+- # check the human entered value for the city
   id: city
   description: name of the city contains "China"
   expression: >
@@ -91,4 +83,3 @@ sample_common:
       jp: Translation in Japanese
     "false":
       en: The city is not in China
-      
