--- a/testfiles/genai_profile.yml
+++ b/testfiles/genai_profile.yml
@@ -1,31 +1,25 @@
 # Example Trust Profile for evaluating genai_credential.json
 ---
-
 metadata:
   name: Experimental Generative AI Profile
   issuer: JPEG Trust Committee
   date: 2023-10-31T00:16:40.346Z
   version: 1.0.0
   language: en
-
-profile_metadata:
-  something: value
-
 ---
 # Section 1
 
-- 
-  id: generalInfo
+- id: generalInfo
   description: Section 1 - General Information
   title: General Information
   report_text: This section provides information about general stuff
 
--   # check for content modification 
+- # check for content modification
   # description provides additional context that does not go into the report
   id: content
   description: content is unmodified
   expression: >
-      declaration.claim.content_status == "assertion.dataHash.match"
+    declaration.claim.content_status == "assertion.dataHash.match"
   report_text:
     "true":
       en: This content has not been modified
@@ -37,14 +31,13 @@ profile_metadata:
 ---
 # Section 2 - Is produced by Generative AI (AIGC)?
 
-- 
-  id: genAI
+- id: genAI
   description: Section 2 - Is Generative AI?
   title: Generative AI Usage
   report_text: This section provides information about whether or not the media asset was produced by generative AI.
 
--   # Is Generative AI?
-    # Checks for 'trainedAlgorithmicMedia' which includes both regular and composited flavors.
+- # Is Generative AI?
+  # Checks for 'trainedAlgorithmicMedia' which includes both regular and composited flavors.
   id: aigc
   description: Is AIGC?
   expression: >
@@ -58,10 +51,10 @@ profile_metadata:
     "false":
       en: This media asset was not produced by generative AI
 
--   # See if the asset has been modified after creation
+- # See if the asset has been modified after creation
   id: declaration_only
   description: is there a declaration and no manifests present?
-  expression:  contains(keys(@), "declaration") && !contains(keys(@), "manifest")
+  expression: contains(keys(@), "declaration") && !contains(keys(@), "manifest")
   report_text:
     "true":
       en: No modifications took place after it was created
@@ -71,8 +64,7 @@ profile_metadata:
 ---
 # Section 3 - Compliance
 
-- 
-  id: compliance
+- id: compliance
   description: Section 3 - Compliance
   title: Compliance
   report_text: This section provides the compliance status of the media asset with respect to this profile.
@@ -85,6 +77,5 @@ profile_metadata:
   report_text:
     "true":
       en: This media asset is compliant with this profile.
-    "false": 
+    "false":
       en: This media asset is not compliant with this profile.
-
