--- a/testfiles/signature_profile.yml
+++ b/testfiles/signature_profile.yml
@@ -1,25 +1,19 @@
 # Example Trust Profile for evaluating no_manifests_credential.json
 ---
-
 metadata:
   name: Experimental Signature Validation Profile
   issuer: JPEG Trust Committee
   date: 2023-09-28T13:19:36.705Z
   version: 1.0.0
   language: en
-
-profile_metadata:
-  something: value
-
 ---
 # Section 1
 
-- 
-  description: Section 1 - Date checks
+- description: Section 1 - Date checks
   title: Validity checking based on dates
   report_text: This section checks the validity dates
 
--   # check for `not_before` 
+- # check for `not_before`
   id: not_before
   description: check the current date is after `not_before`
   expression: toDate(manifests[0].signature.validity.not_before) < now()
@@ -31,7 +25,7 @@ profile_metadata:
     "false":
       en: The certificate is not yet valid
 
--   # check for `not_after` 
+- # check for `not_after`
   id: not_after
   description: check the current date is before `not_after`
   expression: toDate(manifests[0].signature.validity.not_after) > now()
@@ -46,12 +40,11 @@ profile_metadata:
 ---
 # Section 2
 
-- 
-  description: Section 2 - Check the CA/issuer
+- description: Section 2 - Check the CA/issuer
   title: Make sure the issuer is on our Trust List
   report_text: This section checks for valid issuers
 
--   # check the issuer against a known TEST cert
+- # check the issuer against a known TEST cert
   id: test_cert
   description: see if this was signed by a test certificate
   expression: >
@@ -65,8 +58,7 @@ profile_metadata:
     "false":
       en: The issuer is not trusted
 
-
--   # check the issuer against known ones
+- # check the issuer against known ones
   id: issuer
   description: see if the issuer is on our trust list
   expression: >
@@ -80,7 +72,6 @@ profile_metadata:
     "false":
       en: The issuer ({{expr "manifests[0].signature.issuer.CN"}}) is not trusted
 
-
 ---
 # Section 3 - Compliance
 
@@ -93,6 +84,5 @@ profile_metadata:
   report_text:
     "true":
       en: This media asset is signed with a trusted certificate.
-    "false": 
+    "false":
       en: This media asset is not signed with a trusted certificate.
-
