revamped profiles to use new `jpt:` and modified a few to use the results.   Also updated to use new `profile_metadata` output

--- a/testfiles/camera_profile.yml
+++ b/testfiles/camera_profile.yml
@@ -3,13 +3,20 @@
 metadata:
   name: Experimental Camera Profile
   issuer: JPEG Trust Committee
-  date: 2023-09-28T13:19:36.705Z
-  version: 1.0.0
+  date: 2025-07-05T10:20:25.844Z
+  version: 1.1.0
   language: en
 
 "foo:sample":
   description: This is a sample camera profile for testing purposes
   number: 1234567890
+
+---
+# Section 0 - Metadata Output
+
+- id: metadata-output
+  description: Section 0 - Metadata Output
+  report_text: "{{foo:sample.description}} - {{foo:sample.number}}"
 
 ---
 # Section 1
