--- a/output/no_manifests_indicators_report.yml
+++ b/output/no_manifests_indicators_report.yml
@@ -1,8 +1,8 @@
-metadata:
+profile_metadata:
   name: Experimental No Manifests Profile
   issuer: JPEG Trust Committee
   date: 2023-11-02T01:03:16.443Z
-  version: 1.0.0
+  version: 2.0.0
   language: en
 sections:
   - - id: generalInfo
@@ -10,7 +10,7 @@ sections:
       report_text: This section provides information about general stuff
     - id: manifests
       value: false
-      report_text: No trust manifests found in this media asset
-    - id: jpt.profile_compliance
+      report_text: No Trust Manifests found in this media asset
+    - id: jpt:profile_compliance
       value: false
       report_text: This media asset is not compliant with this profile.
