updated all testfiles to C2PA 2.1 and fixed JEST tests to match

--- a/output/no_manifests_indicators_report.json
+++ b/output/no_manifests_indicators_report.json
@@ -1,9 +1,9 @@
 {
-  "metadata": {
+  "profile_metadata": {
     "name": "Experimental No Manifests Profile",
     "issuer": "JPEG Trust Committee",
     "date": "2023-11-02T01:03:16.443Z",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "language": "en"
   },
   "sections": [
@@ -19,7 +19,7 @@
         "report_text": "No Trust Manifests found in this media asset"
       },
       {
-        "id": "jpt.profile_compliance",
+        "id": "jpt:profile_compliance",
         "value": false,
         "report_text": "This media asset is not compliant with this profile."
       }
