minor fix to a sample file

--- a/output/s01-standard-manifest-with-actions-2ed_report.json
+++ b/output/s01-standard-manifest-with-actions-2ed_report.json
@@ -21,7 +21,7 @@
     ],
     [
       {
-        "id": "jpt.profile_compliance",
+        "id": "jpt:profile_compliance",
         "value": false,
         "report_text": "This media asset is not compliant with '(Template Test Profile, 1.0.0)'."
       }
