--- a/output/s01-standard-manifest-with-actions-2ed_report.yml
+++ b/output/s01-standard-manifest-with-actions-2ed_report.yml
@@ -12,6 +12,8 @@ statements:
       report_text: Array - [{"length":7520,"start":2}]
     - id: missing helper
       report_text: "Foo - '🔴 Missing: foo()'"
+    - id: test_conditional_expression
+      report_text: Status -  Match
 test_map:
   alg: sha256
   hash: na6lb3F/uIdiAhZtZp4Oa2aNCj1UvcHVxx/p5ISE2AA=
