--- a/testfiles/testing_profile.yml
+++ b/testfiles/testing_profile.yml
@@ -6,6 +6,10 @@ metadata:
   date: 2025-06-17T22:44:49.717Z
   version: 2.0.0
   language: en
+
+expressions:
+  _hashStatus: if(manifests[0].claim.content_status=="assertion.dataHash.mismatch", "Mismatch", "Match")
+
 ---
 # Section 1: test statements
 
@@ -20,6 +24,10 @@ metadata:
 - id: missing helper
   description: missing
   report_text: Foo - '{{foo}}'
+
+- id: test_conditional_expression
+  description: Does the data hash match?
+  report_text: Status -  {{ expr "_hashStatus()" }}
 
 ---
 # Section 2: test blocks
