--- a/output/camera_indicators_report.yml
+++ b/output/camera_indicators_report.yml
@@ -4,7 +4,7 @@ profile_metadata:
   date: 2025-07-05T10:20:25.844Z
   version: 2.0.0
   language: en
-sections:
+statements:
   - - id: metadata-output
       report_text: This is a sample camera profile for testing purposes - 1234567890
   - - id: generalInfo
