--- a/output/no_manifests_indicators_report.yml
+++ b/output/no_manifests_indicators_report.yml
@@ -4,7 +4,7 @@ profile_metadata:
   date: 2023-11-02T01:03:16.443Z
   version: 2.0.0
   language: en
-sections:
+statements:
   - - id: generalInfo
       title: General Information
       report_text: This section provides information about general stuff
