--- a/output/blocks_indicators_report.yml
+++ b/output/blocks_indicators_report.yml
@@ -28,6 +28,10 @@ asset_info_2:
   alg: sha256
   hash: na6lb3F/uIdiAhZtZp4Oa2aNCj1UvcHVxx/p5ISE2AA=
   myNumber: 100
+myExample:
+  description: This is a test example
+  myDate: 2025-06-17T22:44:49.717Z
+  myNumber: 25
 statements:
   - - id: non-scalers
       report_text: Object -
